# Argus

./: .pre-commit-config.yaml  LICENSE  conda_env.yml  pyproject.toml  ruff.toml
.github/workflows/: bump.yml  publish.yml  pull_request.yml  run_test.yml
archive/: env.yml
data/preprocessed_data/: IPTA_Challenge1_open_Dataset2_metadata  IPTA_Challenge1_open_Dataset2_residuals.npy  README.md  preprocess_data.py
docs/: conf.py  index.rst
docs/content/: getting_started.md
docs/latex_notes/: kalman_filter_applied_to_PTA_timing_residuals.tex
notebooks/: 04.explore_kalman_filter.ipynb  sandbox.ipynb  sandbox2.ipynb
python/argus/: __init__.py  data_loader.py  gravitational_waves.py  kalman_filter.py  main.py  models.py
python/argus/legacy_code/: make_synthetic_data.py
src/: data_loader.py  functional_kalman_filter.py  kalman_filter.py  models.py
test/: test_data_loader.py  test_gravitational_waves.py  test_kalman_filter.py  test_models.py
